objects/DMAPP__DM_Milestone_Question_Option__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__Colour__c</fullName>
        <label>Colour</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Milestone_Question__c</fullName>
        <label>Milestone Question</label>
        <referenceTo>DMAPP__DM_Milestone_Question__c</referenceTo>
        <relationshipLabel>Milestone Question Options</relationshipLabel>
        <relationshipName>Milestone_Question_Options</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Option_Name__c</fullName>
        <label>Option Name</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__SortOrder__c</fullName>
        <label>SortOrder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Milestone Question Option</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <columns>NAME</columns>
        <columns>DMAPP__Option_Name__c</columns>
        <columns>DMAPP__Score__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestone Question Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>